Fix on mobile menu

--- a/src/app/components/mobile-menu/mobile-menu.component.scss
+++ b/src/app/components/mobile-menu/mobile-menu.component.scss
@@ -22,7 +22,7 @@
       color: $mtm_dark_green_color;
     }
     .spacer {
-      padding-bottom: 1em;
+      margin-bottom: 1em;
     }
     .sign-out-item{
       margin-top: 1em;
